[gd_scene load_steps=6 format=2]

[ext_resource path="res://resources/themes/kenney/kenney.tres" type="Theme" id=1]
[ext_resource path="res://resources/themes/kenney/panel_texture.tres" type="StyleBox" id=2]
[ext_resource path="res://sprites/buildings/logistics-drone-factory.png" type="Texture" id=3]
[ext_resource path="res://ui/elements/required-resource-item.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/controllers/BuildingProgressInspectorController.gd" type="Script" id=5]

[node name="BuildingProgressInspector" type="PanelContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 700.0
margin_bottom = 236.0
theme = ExtResource( 1 )
custom_styles/panel = ExtResource( 2 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
_required_resource_item_element = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 8.33924
margin_top = 8.33924
margin_right = 672.124
margin_bottom = 208.587
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 249.0
margin_right = 414.0
margin_bottom = 200.0
custom_constants/separation = 10
alignment = 1

[node name="BuildingName" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 11.0
margin_right = 165.0
margin_bottom = 35.0
text = "This is a building"
align = 1

[node name="BuildingIcon" type="TextureRect" parent="HBoxContainer/VBoxContainer"]
margin_top = 45.0
margin_right = 165.0
margin_bottom = 121.0
texture = ExtResource( 3 )
stretch_mode = 4

[node name="ProgressBar" type="ProgressBar" parent="HBoxContainer/VBoxContainer"]
margin_top = 131.0
margin_right = 165.0
margin_bottom = 155.0
max_value = 1.0
step = 0.001
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RequiredResources" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 165.0
margin_right = 165.0
margin_bottom = 189.0
alignment = 1

[node name="required-resource-item" parent="HBoxContainer/VBoxContainer/RequiredResources" instance=ExtResource( 4 )]
margin_left = 47.0
margin_right = 117.0
